further warning fixxes (#13540)
* further warning fixxes

* revert Locale.of (Java11...)

* revert Locale.of (Java11...)

* fix build